# django-ecommerce

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
app/: settings.py
